--- a/src/index.html
+++ b/src/index.html
@@ -612,7 +612,7 @@
               required
             />
             <button
-              class="font-normal text-[14px] leading-[28px] tracking-[0.2px] text-[#FFFFFF] bg-[#23A6F0] py-[10px] px-5 rounded-r-[5px]"
+              class="font-normal text-[14px] leading-[28px] tracking-[0.2px] text-[#FFFFFF] bg-[#23A6F0] py-[10px] px-5 rounded-r-[5px] cursor-pointer transition-all duration-[0.3s] ease-in-out hover:bg-[#2583b9]"
               type="submit"
             >
               Subscribe
