--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./output.css" rel="stylesheet" />
     <title>BrandName</title>
-    <link rel="stylesheet" href="./output.css" />
+    <link rel="stylesheet" href="./src/output.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -42,7 +42,7 @@
             </li>
             <li>
               <a
-                class="font-medium text-[16px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] transition duration-[0.3s] hover:text-[#23A6F0] "
+                class="font-medium text-[16px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] transition duration-[0.3s] hover:text-[#23A6F0]"
                 href=""
                 >Contact</a
               >
@@ -652,10 +652,26 @@
           >
             Company info
           </h3>
-          <h4 class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5">About Us</h4>
-          <h4 class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5">Carrier</h4>
-          <h4 class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5">We are hiring</h4>
-          <h4 class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5">Blog</h4>
+          <h4
+            class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5"
+          >
+            About Us
+          </h4>
+          <h4
+            class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5"
+          >
+            Carrier
+          </h4>
+          <h4
+            class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5"
+          >
+            We are hiring
+          </h4>
+          <h4
+            class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5"
+          >
+            Blog
+          </h4>
         </div>
         <div class="box w-[15%]">
           <h3
@@ -663,10 +679,26 @@
           >
             Features
           </h3>
-          <h4 class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5">Business Marketing</h4>
-          <h4 class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5">User Analytic</h4>
-          <h4 class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5">Live Chat</h4>
-          <h4 class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5">Unlimited Support</h4>
+          <h4
+            class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5"
+          >
+            Business Marketing
+          </h4>
+          <h4
+            class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5"
+          >
+            User Analytic
+          </h4>
+          <h4
+            class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5"
+          >
+            Live Chat
+          </h4>
+          <h4
+            class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5"
+          >
+            Unlimited Support
+          </h4>
         </div>
         <div class="box w-[15%]">
           <h3
@@ -674,10 +706,26 @@
           >
             Resources
           </h3>
-          <h4 class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5">IOS & Android</h4>
-          <h4 class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5">Watch a Demo</h4>
-          <h4 class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5">Customers</h4>
-          <h4 class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5">API</h4>
+          <h4
+            class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5"
+          >
+            IOS & Android
+          </h4>
+          <h4
+            class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5"
+          >
+            Watch a Demo
+          </h4>
+          <h4
+            class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5"
+          >
+            Customers
+          </h4>
+          <h4
+            class="font-bold text-[14px] leading-[24px] tracking-[0.2px] text-[#FFFFFF] mb-2.5"
+          >
+            API
+          </h4>
         </div>
       </div>
     </footer>
